<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.namotab.editProfile">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:background="@color/background_color"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_weight="0.125">

                <ImageView
                    android:id="@+id/dpimg"
                    android:layout_width="wrap_content"
                    android:layout_height="190px"
                    android:layout_margin="2dp"
                    android:src="@drawable/userdefault"
                    android:layout_weight="0.125"  />

                <!--android:scaleType="fitXY"-->


                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/primary"
                    android:onClick="editButtonClick"
                    android:text="Edit Profile"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/e_fullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18dp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />



            <EditText
                android:id="@+id/e_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />

            <EditText
                android:id="@+id/e_mno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />
            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="8px"
                android:background="@drawable/edittext_shape" />
            <EditText
                android:id="@+id/e_college"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="9dp"
                android:gravity="center_vertical"
                android:hint="@string/college"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />

            <EditText
                android:id="@+id/e_uni"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/university"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />
            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="8px"
                android:background="@drawable/edittext_shape" />
            <EditText
                android:id="@+id/e_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/location"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />

            <EditText
                android:id="@+id/e_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/city"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />


            <EditText
                android:id="@+id/e_pin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/pin"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded,TextFields"
                android:maxLines="1" />

            <EditText
                android:id="@+id/e_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/state"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />

            <EditText
                android:id="@+id/e_country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/country"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />
            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="8px"
                android:background="@drawable/edittext_shape" />

            <EditText
                android:id="@+id/e_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />


        </LinearLayout>

    </ScrollView >


</RelativeLayout>
